# fdnn

./: .gitignore  README.md  pyproject.toml
fdnn/: __init__.py  _model.py  _pml.py  config.py  hub.py  solver.py
fdnn/solvers/: __init__.py  gmres.py
fdnn/utils/: PML_utils.py  __init__.py  physics.py
nnfd/: PML_utils.py  __init__.py  _pml.py  config.py  hub.py  solver.py
nnfd/solvers/: __init__.py  gmres.py
nnfd/utils/: __init__.py  physics.py  plot_field3d.py  utils.py
scripts/: migrate_checkpoint.py  test_model.py  upload_to_hub.py
tests/: test_random_fdfd.py
