[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdnn"
version = "0.1.0"
description = "Finite Difference Neural Network solver for 3D Maxwell FDFD"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "torch>=2.0",
    "numpy",
    "tqdm",
    "matplotlib",
    "plotly",
    "scikit-image",
]

[project.optional-dependencies]
gpu-utils = [
    "gpustat",           # for fdnn.utils.get_least_used_gpu()
]
hub = [
    "huggingface_hub>=0.20",   # for fdnn.hub.download() when implemented
]
dev = [
    "pytest",
    "pytest-cov",
    "build",
    "twine",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fdnn*"]
